@@ -1,3 +1,8 @@
+2011-04-22  Uros Bizjak  <ubizjak@gmail.com>
+
+	PR target/48723
+	* gcc.target/i386/pr48723.c: New test.
+
 2011-04-22  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c/48716
